# hs-chart-tutorial

./: README.md  chart-tutorial.cabal  deep-learning.cabal  stack.yaml
src/: Main.hs  mychart.hs
